add donate info in layout

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -114,6 +114,11 @@
         }(document, 'script', 'facebook-jssdk'));</script>
         <!--facebook button-->
       </div>
+      Donate cdnjs:
+      <div>
+        <a href="https://tip4commit.com/github/cdnjs/cdnjs"><img src="https://tip4commit.com/projects/919.svg" /></a>
+        <a href="https://www.bountysource.com/teams/cdnjs/issues?utm_source=cdnjs&utm_medium=shield&utm_campaign=bounties_received"><img src="https://www.bountysource.com/badge/team?team_id=11914&style=bounties_received" /></a>
+      </div>
     </p>
       </div>
       <div class="col-md-4">
