--- a/templates/about.html
+++ b/templates/about.html
@@ -38,7 +38,7 @@
         <tr>
           <td style="width: 300px;">
             <a href="https://github.com/PeterDaveHello">
-              <img style="width: 50px; height: 50px;" alt="Peter Dave Hello" src="/img/PeterDaveHello.png" />
+              <img style="width: 50px; height: 50px;" alt="Peter Dave Hello" src="/img/PeterDaveHello.jpg" />
               Peter Dave Hello
             </a>
             <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/peterdavehello" data-show-count="false" data-lang="en">Follow @peterdavehello</a>
