--- a/templates/library.html
+++ b/templates/library.html
@@ -57,5 +57,8 @@
       </script>
       <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     -->
+    <br />
+    <br />
+     <p><a href="https://news.cdnjs.com" target="_blank">We are trying to start a front end news community, come join the fun!</a></p>
   </div>
 </div>
