--- a/templates/layout.html
+++ b/templates/layout.html
@@ -73,53 +73,12 @@
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=watch&count=true&v=2" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=star&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=fork&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
-      <br />
-      Share cdnjs to your friends:
-      <div style="font-size:0px">
-        <!--twitter button-->
-        <div style="display:inline-block;">
-          <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://cdnjs.com" data-hashtags="cdnjs">Tweet</a>
-        </div>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-        <!--twitter button-->
-        <!--pinterest button-->
-        <div style="display: inline-block; margin-left: 5px;">
-          <a href="//www.pinterest.com/pin/create/button/" data-pin-do="buttonBookmark"  data-pin-color="red"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_red_20.png" /></a>
-        </div>
-        <script type="text/javascript" async defer src="//assets.pinterest.com/js/pinit.js"></script>
-        <!--pinterest button-->
-        <!--google plus button-->
-        <div style="display:inline-block; margin-left: 5px;">
-          <div class="g-plusone" data-size="medium" data-annotation="none" data-href="https://cdnjs.com"></div>
-        </div>
-        <script type="text/javascript">
-          (function() {
-            var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-            po.src = 'https://apis.google.com/js/platform.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-          })();
-        </script>
-        <!--google plus button-->
-        <!--facebook button-->
-        <div style="display:inline-block; margin-left: 5px;">
-          <div class="fb-like" data-href="https://cdnjs.com" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
-        </div>
-        <div id="fb-root"></div>
-        <script>(function(d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";
-          fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));</script>
-        <!--facebook button-->
-      </div>
-      Donate cdnjs:
-      <div>
-        <a href="https://tip4commit.com/github/cdnjs/cdnjs"><img src="https://tip4commit.com/projects/919.svg" /></a>
-        <a href="https://www.bountysource.com/teams/cdnjs/issues?utm_source=cdnjs&utm_medium=shield&utm_campaign=bounties_received"><img src="https://www.bountysource.com/badge/team?team_id=11914&style=bounties_received" /></a>
-      </div>
-    </p>
+      </p>
+      <a class="btn btn-success" href="https://news.cdnjs.com" target="_blank" style="
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+">Come join our new front end news community!</a>
       </div>
       <div class="col-md-4">
         <script async type="text/javascript" src="https://cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=cdnjscom" id="_carbonads_js"></script>
