--- a/templates/library.html
+++ b/templates/library.html
@@ -59,6 +59,11 @@
     -->
     <br />
     <br />
-     <p><a href="https://news.cdnjs.com" target="_blank">We are trying to start a front end news community, come join the fun!</a></p>
-  </div>
+    <p></p>
+   <a class="btn btn-success" href="https://news.cdnjs.com" target="_blank" style="
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+">Come join our new front end news community!</a></p>
+</div>
 </div>
