--- a/templates/layout.html
+++ b/templates/layout.html
@@ -73,12 +73,9 @@
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=watch&count=true&v=2" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=star&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=fork&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
+      </p><p>
+      <a class="btn btn-success" href="https://news.cdnjs.com" target="_blank" style="width: 100%;margin-top: 20px;margin-bottom: 20px;">Come join our new front end news community!</a>
       </p>
-      <a class="btn btn-success" href="https://news.cdnjs.com" target="_blank" style="
-    width: 100%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-">Come join our new front end news community!</a>
       </div>
       <div class="col-md-4">
         <script async type="text/javascript" src="https://cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=cdnjscom" id="_carbonads_js"></script>
