add ghbtns - star button of website repo

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -72,6 +72,7 @@
       <br><span class="translateit">Join us now on GitHub!</span><br>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=watch&count=true&v=2" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=star&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
+      <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=new-website&type=star&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=fork&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       </p><p>
       <a class="btn btn-success" href="https://news.cdnjs.com" target="_blank" style="width: 100%;margin-top: 20px;margin-bottom: 20px;">Come join our new front end news community!</a>
