Change news links to http for now. Is cloudflare breaking websockets?

--- a/templates/library.html
+++ b/templates/library.html
@@ -44,6 +44,6 @@
 
     <br />
     <br />
-    <p></p><a class="btn btn-success" href="https://news.cdnjs.com" target="_blank" style="width: 100%;margin-top: 20px;margin-bottom: 20px;">Come join our new front end news community!</a></p>
+    <p></p><a class="btn btn-success" href="http://news.cdnjs.com" target="_blank" style="width: 100%;margin-top: 20px;margin-bottom: 20px;">Come join our new front end news community!</a></p>
 </div>
 </div>
