--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,16 @@
 <div>
   <div class="col-md-12">
     <p style="margin-top: 6px;">
+    
+      <span class="translateit">Everyone loves the&nbsp;</span><a target="_blank" href="http://code.google.com/apis/libraries/devguide.html" class="translateit">Google CDN</a><span class="translateit">&nbsp;right? Even&nbsp;</span><a href="http://www.asp.net/ajaxlibrary/cdn.ashx" target="_blank" class="translateit">Microsoft runs their own CDN</a>.
+      <br><span class="translateit">The problem is, they only host the most popular libraries.</span>
+      <br><span class="translateit">We host it all - JavaScript, CSS, SWF, images, etc!</span>
+      <br><span class="translateit">Join us now on GitHub!</span><br>
+      <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=watch&count=true&v=2" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
+      <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=star&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
+      <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=new-website&type=star&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
+      <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=fork&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
+      </p><p>
       <span class="translateit">Supports http/https/spdy, we encourage always using <strong>https</strong>!
       <br /><span class="translateit">Currently used by ~530,000 websites worldwide, </span><a href="http://trends.builtwith.com/cdn/CDN-JS" class="translateit">see more</a>.
     </p>
