--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <div>
   <div class="col-md-12">
     <div class="">
-      <div class="packages-table-container">
+      <div class="packages-table-container" style="display: none;">
 
         <table style="margin-top: 10px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
           <thead>
@@ -17,42 +17,9 @@
             </tr>
           </thead>
           <tbody>
-            {{#packages}}
-              <tr itemscope itemtype="http://schema.org/SoftwareApplication" data-library-name="{{name}}" data-library-keywords="{{keywords}}" id="{{id}}" class="odd gradeX normal">
-                <td style="white-space: nowrap;">
-                  <a itemprop="name" href="libraries/{{name}}">
-                    {{name}}
-                  </a>
-                  <meta itemprop="url" content="{{homepage}}" />
-                  <meta itemprop="version" content="{{version}}" />
-                  <!-- hidden text for searching -->
-                  <div style="display: none;">
-                    {{keywords}}
-                  </div>
-                </td>
-                <td style="padding: 0; width: 100%;">
-                  <div style="position: relative; padding: 8px;" data-lib-name="{{name}}" class="library-column {{fileType}}-type">
-                    <p itemprop="downloadUrl" class="library-url" style="padding: 0; margin: 0">https://cdnjs.cloudflare.com/ajax/libs/{{originalName}}/{{version}}/{{filename}}</p>
-                  </div>
-                </td>
-              </tr>
-              {{/packages}}
           </tbody>
         </table>
       </div>
     </div>
   </div>
 </div>
-<div style="clear: both;"></div>
-</div>
-<style>
-.authenticated tr.normal:hover .change-favorite:before {
-  content:"+" !important;
-}
-.authenticated tr.favorite:hover .change-favorite:before {
-  content:"-" !important;
-}
-.authenticated tr.favorite td {
-  background-color: #fcf8e3 !important;
-}
-</style>
