--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,55 +5,45 @@
 <!--[if gt IE 8]><!-->
 <html class="no-js" lang="en">
 <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{{title}}</title>
-  <meta property="og:title" content="{{title}}" />
-  <meta property="og:image" content="/img/logotext.png" />
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="{{description}}">
-  <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="cdnjs">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/3.1.1-1/css/united/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/theme.css">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>{{title}}</title>
+    <meta property="og:title" content="{{title}}" />
+    <meta property="og:image" content="/img/logotext.png" />
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="{{description}}">
+    <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="cdnjs">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/3.1.1-1/css/united/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/theme.css">
+  </head>
 
-<body>
-
-  <div class="container {{wrapperClass}}">
-    <div class="row">
-      <div class="col-md-12">
-            <ul class="menu">
-              <li class="logo"><a class="" href="/">cdnjs search</a></li>
-
-              <li class=""><a href="http://github.com/cdnjs/cdnjs" class="translateit">Add a lib</a></li>
-
-              <li class=""><a href="https://gitter.im/cdnjs/cdnjs" class="translateit">Chat</a></li>
-            
+  <body>
+    <div class="container {{wrapperClass}}">
+      <div class="row">
+        <div class="col-md-12">
+          <ul class="menu">
+            <li class="logo"><a class="" href="/">cdnjs search</a></li>
+            <li class=""><a href="http://github.com/cdnjs/cdnjs" class="translateit">Add a lib</a></li>
+            <li class=""><a href="https://gitter.im/cdnjs/cdnjs" class="translateit">Chat</a></li>
             <li><a href="https://www.cloudflare.com/network-map">Network</a></li>
             <li><a href="http://stats.pingdom.com/4jg86a2wqei0">Uptime</a></li>
             <li><a href="https://github.com/cdnjs/cdnjs/issues">Issues</a></li>
-           <!-- <li><a href="https://github.com/cdnjs/cdnjs/wiki/Extensions%2C-Plugins%2C-Resources">Plugins</a></li>-->
+            <!-- <li><a href="https://github.com/cdnjs/cdnjs/wiki/Extensions%2C-Plugins%2C-Resources">Plugins</a></li>-->
             <li class=""><a href="/about" class="translateit">About</a></li>
             <li class=""><a href="/libraries" class="translateit">Browse Libraries</a></li>
-            </ul>
-       </div>
-       </div>
-
-    <div class="page row">
-      {{{page}}}
-
+          </ul>
+         </div>
+         </div>
+      <div class="page row">{{{page}}}</div>
     </div>
-       
-  </div>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-dropdown.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/zeroclipboard/2.0.0-beta.5/ZeroClipboard.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/algoliasearch/2.8.0/algoliasearch.min.js"></script>
-  <script src="/js/main.js"></script>
-
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-dropdown.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/zeroclipboard/2.0.0-beta.5/ZeroClipboard.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/algoliasearch/2.8.0/algoliasearch.min.js"></script>
+    <script src="/js/main.js"></script>
     <script src="//static.getclicky.com/js"></script>
     <script type="text/javascript">try{clicky.init(66376315);}catch(err){}</script>
     <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66376315ns.gif" /></p></noscript>
@@ -67,6 +57,5 @@
       ga('require', 'displayfeatures');
       ga('send', 'pageview');
     </script>
-</body>
-
+  </body>
 </html>
