Fix linking bug, thanks @Cache-Money

--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -20,7 +20,7 @@
             {{#packages}}
               <tr itemscope itemtype="http://schema.org/SoftwareApplication" data-library-name="{{name}}" data-library-keywords="{{keywords}}" id="{{id}}" class="odd gradeX normal">
                 <td style="white-space: nowrap;">
-                  <a itemprop="name" href="libraries/{{name}}">
+                  <a itemprop="name" href="/libraries/{{name}}">
                     {{name}}
                   </a>
                   <meta itemprop="url" content="{{homepage}}" />
