remove empty and translateit class

--- a/templates/newsfeed.html
+++ b/templates/newsfeed.html
@@ -1,6 +1,6 @@
   <div>
     <div class="col-md-3" style="border-right: 1px solid #ccc;">
-      <strong class="translateit">Post an update</strong>
+      <strong>Post an update</strong>
       <div style="clear: both;"></div>
       <hr />
       <div class="status-container" style="display: none;">
@@ -12,23 +12,23 @@
         </form>
       </div>
       <div class="login-or-register"  style="display: none;">
-      <p><a href="/login" class="translateit">Login</a> <span class="translateit">or</span> <a href="/register" class="translateit">register</a><span class="translateit"> to post a status update</span></p>
+      <p><a href="/login">Login</a> <span>or</span> <a href="/register">register</a><span> to post a status update</span></p>
       </div>
       <div style="clear: both;"></div>
       <hr />
-     <strong class="translateit">Rules</strong><br /> <br/>
+     <strong>Rules</strong><br /> <br/>
       <ul style="margin: 0;padding:0;">
-        <li class="translateit">Feel free to promote your own projects, ask for feedback or say anything you feel like</li>
-        <li class="translateit">Keep your updates relevant to the web development industry</li>
-        <li class="translateit">You may only post <strong>one</strong> news item a day</li>
-        <li class="translateit">Limited to 200 characters, use url shorteners!</li>
+        <li>Feel free to promote your own projects, ask for feedback or say anything you feel like</li>
+        <li>Keep your updates relevant to the web development industry</li>
+        <li>You may only post <strong>one</strong> news item a day</li>
+        <li>Limited to 200 characters, use url shorteners!</li>
       </ul>
       <br />
-     <strong class="translateit">Chat</strong><br /> <br/>
-      <p><span class="translateit">Join the cdnjs</span> <a href="https://gitter.im/cdnjs/cdnjs" target="_blank" class="translateit">community chat</a></p>
+     <strong>Chat</strong><br /> <br/>
+      <p><span>Join the cdnjs</span> <a href="https://gitter.im/cdnjs/cdnjs" target="_blank">community chat</a></p>
     </div>
     <div class="col-md-9">
-      <strong class="translateit">Latest updates</strong>
+      <strong>Latest updates</strong>
       <div style="clear: both;"></div>
       <hr />
       <ul style="margin: 0; padding: 0; list-style: none;">
@@ -37,7 +37,7 @@
           <div class="row">
             <div class="col-md-1"><img style="float: left; margin-right: 5px;  margin-bottom: 5px; width: 50px;" class="img-circle" src="{{gravatar}}" /></div>
             <div class="col-md-11">
-            <p><a href="/profile/{{login}}"><strong>{{login}}</strong></a><br /><span class="translateit">{{{status}}}</span></p>
+            <p><a href="/profile/{{login}}"><strong>{{login}}</strong></a><br /><span>{{{status}}}</span></p>
             <div style="color: #ccc;" class="pull-right"><a data-disqus-identifier="{{_id}}" href="/news/{{_id}}/{{slug}}">Comments</a> | Posted <span  class="timeago" title="">{{timeago}}</span></div></div>
             <div style="clear: both;"></div></div>
 
