--- a/templates/about.html
+++ b/templates/about.html
@@ -2,23 +2,23 @@
   <div class="col-md-12">
     <p style="margin-top: 6px;">
     
-      <span class="translateit">Everyone loves the&nbsp;</span><a target="_blank" href="http://code.google.com/apis/libraries/devguide.html" class="translateit">Google CDN</a><span class="translateit">&nbsp;right? Even&nbsp;</span><a href="http://www.asp.net/ajaxlibrary/cdn.ashx" target="_blank" class="translateit">Microsoft runs their own CDN</a>.
-      <br><span class="translateit">The problem is, they only host the most popular libraries.</span>
-      <br><span class="translateit">We host it all - JavaScript, CSS, SWF, images, etc!</span>
-      <br><span class="translateit">Join us now on GitHub!</span><br>
+      <span>Everyone loves the&nbsp;</span><a target="_blank" href="http://code.google.com/apis/libraries/devguide.html">Google CDN</a><span>&nbsp;right? Even&nbsp;</span><a href="http://www.asp.net/ajaxlibrary/cdn.ashx" target="_blank">Microsoft runs their own CDN</a>.
+      <br><span>The problem is, they only host the most popular libraries.</span>
+      <br><span>We host it all - JavaScript, CSS, SWF, images, etc!</span>
+      <br><span>Join us now on GitHub!</span><br>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=watch&count=true&v=2" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=star&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=new-website&type=star&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=fork&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       </p><p>
-      <span class="translateit">Supports http/https/spdy, we encourage always using <strong>https</strong>!
-      <br /><span class="translateit">Currently used by ~530,000 websites worldwide, </span><a href="http://trends.builtwith.com/cdn/CDN-JS" class="translateit">see more</a>.
+      <span>Supports http/https/spdy, we encourage always using <strong>https</strong>!
+      <br /><span>Currently used by ~530,000 websites worldwide, </span><a href="http://trends.builtwith.com/cdn/CDN-JS">see more</a>.
     </p>
 
     <table class="table" style="margin-top: 15px; margin-bottom: 15px;">
       <thead>
         <tr>
-          <td class="translateit"><h3>Creators</h3></td>
+          <td><h3>Creators</h3></td>
         </tr>
       </thead>
       <tbody>
@@ -41,7 +41,7 @@
       </tbody>
       <thead>
         <tr>
-          <td class="translateit"><h3>Maintainers</h3></td>
+          <td><h3>Maintainers</h3></td>
         </tr>
       </thead>
       <tbody>
@@ -80,25 +80,25 @@
         <li>Hover over rows and click on the +/- symbols to change your favorites(yellow)</li>
       </ul>
     </div>
-    <h3 class="translateit">Sponsors</h3>
+    <h3>Sponsors</h3>
     <div class="sponsors">
 
 <a href="http://cloudflare.com">
   <img alt="cloudflare" style="margin-bottom: 20px;" src="/img/poweredbycloudflare.png" />
 </a>
 <br />
-      <p class="translateit">At CloudFlare, we believe that open source, community-driven projects like CDNJS are the tools upon which the future of the internet will be built. CloudFlare is proud to provide the global CDN infrastructure that will help power that future.</p>
+      <p>At CloudFlare, we believe that open source, community-driven projects like CDNJS are the tools upon which the future of the internet will be built. CloudFlare is proud to provide the global CDN infrastructure that will help power that future.</p>
       <br />
-          <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp" width="200" height="63"></a><br /><span  class="translateit">Our user system is sponsored by UserApp. UserApp provides you with user management functionality that results in faster development, faster revenue, more users, and the ability to serve your users better by engaging with them more efficiently.</span></p>
+          <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp" width="200" height="63"></a><br /><span >Our user system is sponsored by UserApp. UserApp provides you with user management functionality that results in faster development, faster revenue, more users, and the ability to serve your users better by engaging with them more efficiently.</span></p>
       <br />
       <a href="https://www.algolia.com">
         <img alt="algolia" style="margin-bottom: 20px;" src="/img/algolia256x80.png" width="128" height="40"/>
       </a>
-      <p class="translateit">Algolia provides a developer-friendly SaaS API for database search. It enables any website or mobile application to easily provide its end-users with an instant and relevant search. With Algolia's unique find as you type experience, users can find what they're looking for in just a few keystrokes.</p>
+      <p>Algolia provides a developer-friendly SaaS API for database search. It enables any website or mobile application to easily provide its end-users with an instant and relevant search. With Algolia's unique find as you type experience, users can find what they're looking for in just a few keystrokes.</p>
       <!--
                             <em><img src="http://d2i3bryf8wh7jo.cloudfront.net/bitcoin1.png" style="float: left; margin-right: 10px; width: 40px; height: 40px;" /> Earn <strong>$5 in Bitcoin</strong> for every pull request which <a href="https://github.com/cdnjs/cdnjs#enabling-npm-auto-update">converts a library to auto-update.</a></em>-->
     </div>
-    <h3 class="translateit">Media</h3>
+    <h3>Media</h3>
     <iframe width="100%" height="720" src="//www.youtube-nocookie.com/embed/6-5hJblkLjo?rel=0&hd=1&vq=hd720" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
