--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,15 +23,15 @@
       <div class="row">
         <div class="col-md-12">
           <ul class="menu">
-            <li class="logo"><a class="" href="/">cdnjs search</a></li>
-            <li class=""><a href="http://github.com/cdnjs/cdnjs" class="translateit">Add a lib</a></li>
-            <li class=""><a href="https://gitter.im/cdnjs/cdnjs" class="translateit">Chat</a></li>
+            <li class="logo"><a href="/">cdnjs search</a></li>
+            <li><a href="http://github.com/cdnjs/cdnjs">Add a lib</a></li>
+            <li><a href="https://gitter.im/cdnjs/cdnjs">Chat</a></li>
             <li><a href="https://www.cloudflare.com/network-map">Network</a></li>
             <li><a href="http://stats.pingdom.com/4jg86a2wqei0">Uptime</a></li>
             <li><a href="https://github.com/cdnjs/cdnjs/issues">Issues</a></li>
             <!-- <li><a href="https://github.com/cdnjs/cdnjs/wiki/Extensions%2C-Plugins%2C-Resources">Plugins</a></li>-->
-            <li class=""><a href="/about" class="translateit">About</a></li>
-            <li class=""><a href="/libraries" class="translateit">Browse Libraries</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/libraries">Browse Libraries</a></li>
           </ul>
          </div>
          </div>
