--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -6,14 +6,14 @@
 </div>
 <div>
   <div class="col-md-12">
-    <div class="">
+    <div>
       <div class="packages-table-container">
 
         <table style="margin-top: 10px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
           <thead>
             <tr>
-              <th class="translateit">Library</th>
-              <th class="translateit">Link</th>
+              <th>Library</th>
+              <th>Link</th>
             </tr>
           </thead>
           <tbody>
