--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,7 +44,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/zeroclipboard/2.0.0-beta.5/ZeroClipboard.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/algoliasearch/2.8.0/algoliasearch.min.js"></script>
     <script src="/js/main.js"></script>
-    <script src="//static.getclicky.com/js"></script>
+    <script async src="//static.getclicky.com/js"></script>
     <script type="text/javascript">try{clicky.init(66376315);}catch(err){}</script>
     <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66376315ns.gif" /></p></noscript>
     <script>
