--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,6 @@
 <div>
-  <div class="col-md-12">
+  <div class="row">
+  <div class="col-md-6">
     <p style="margin-top: 6px;">
     
       <span class="translateit">Everyone loves the&nbsp;</span><a target="_blank" href="http://code.google.com/apis/libraries/devguide.html" class="translateit">Google CDN</a><span class="translateit">&nbsp;right? Even&nbsp;</span><a href="http://www.asp.net/ajaxlibrary/cdn.ashx" target="_blank" class="translateit">Microsoft runs their own CDN</a>.
@@ -14,6 +15,38 @@
       <span class="translateit">Supports http/https/spdy, we encourage always using <strong>https</strong>!
       <br /><span class="translateit">Currently used by ~530,000 websites worldwide, </span><a href="http://trends.builtwith.com/cdn/CDN-JS" class="translateit">see more</a>.
     </p>
+
+    <div class="logged-in" style="display: none;">
+      <p>
+        <img id="gravatar" src="" style="float: left; width: 64px; height: 64px; border: 1px solid #ccc; margin-right: 10px;" />Hey
+        <span style="font-weight: bold;" id="name"></span>
+      </p>
+      <ul style="list-style: none;">
+        <li>Hover over rows and click on the +/- symbols to change your favorites(yellow)</li>
+      </ul>
+    </div>
+    <h3 class="translateit">Sponsors</h3>
+    <div class="sponsors">
+
+<a href="http://cloudflare.com">
+  <img alt="cloudflare" style="margin-bottom: 20px;" src="/img/poweredbycloudflare.png" />
+</a>
+<br />
+      <p class="translateit">At CloudFlare, we believe that open source, community-driven projects like CDNJS are the tools upon which the future of the internet will be built. CloudFlare is proud to provide the global CDN infrastructure that will help power that future.</p>
+      <br />
+          <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp" width="200" height="63"></a><br /><span  class="translateit">Our user system is sponsored by UserApp. UserApp provides you with user management functionality that results in faster development, faster revenue, more users, and the ability to serve your users better by engaging with them more efficiently.</span></p>
+      <br />
+      <a href="https://www.algolia.com">
+        <img alt="algolia" style="margin-bottom: 20px;" src="/img/algolia256x80.png" width="128" height="40"/>
+      </a>
+      <p class="translateit">Algolia provides a developer-friendly SaaS API for database search. It enables any website or mobile application to easily provide its end-users with an instant and relevant search. With Algolia's unique find as you type experience, users can find what they're looking for in just a few keystrokes.</p>
+      <!--
+                            <em><img src="http://d2i3bryf8wh7jo.cloudfront.net/bitcoin1.png" style="float: left; margin-right: 10px; width: 40px; height: 40px;" /> Earn <strong>$5 in Bitcoin</strong> for every pull request which <a href="https://github.com/cdnjs/cdnjs#enabling-npm-auto-update">converts a library to auto-update.</a></em>-->
+    </div>
+    <h3 class="translateit">Media</h3>
+    <iframe width="100%" height="720" src="//www.youtube-nocookie.com/embed/6-5hJblkLjo?rel=0&hd=1&vq=hd720" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <div class="col-md-6">
 
     <table class="table" style="margin-top: 15px; margin-bottom: 15px;">
       <thead>
@@ -70,35 +103,8 @@
         </tr>
       </tbody>
     </table>
-    <script async>window.twttr=(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],t=window.twttr||{};if(d.getElementById(id))return t;js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);t._e=[];t.ready=function(f){t._e.push(f);};return t;}(document,"script","twitter-wjs"));</script>
-    <div class="logged-in" style="display: none;">
-      <p>
-        <img id="gravatar" src="" style="float: left; width: 64px; height: 64px; border: 1px solid #ccc; margin-right: 10px;" />Hey
-        <span style="font-weight: bold;" id="name"></span>
-      </p>
-      <ul style="list-style: none;">
-        <li>Hover over rows and click on the +/- symbols to change your favorites(yellow)</li>
-      </ul>
-    </div>
-    <h3 class="translateit">Sponsors</h3>
-    <div class="sponsors">
-
-<a href="http://cloudflare.com">
-  <img alt="cloudflare" style="margin-bottom: 20px;" src="/img/poweredbycloudflare.png" />
-</a>
-<br />
-      <p class="translateit">At CloudFlare, we believe that open source, community-driven projects like CDNJS are the tools upon which the future of the internet will be built. CloudFlare is proud to provide the global CDN infrastructure that will help power that future.</p>
-      <br />
-          <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp" width="200" height="63"></a><br /><span  class="translateit">Our user system is sponsored by UserApp. UserApp provides you with user management functionality that results in faster development, faster revenue, more users, and the ability to serve your users better by engaging with them more efficiently.</span></p>
-      <br />
-      <a href="https://www.algolia.com">
-        <img alt="algolia" style="margin-bottom: 20px;" src="/img/algolia256x80.png" width="128" height="40"/>
-      </a>
-      <p class="translateit">Algolia provides a developer-friendly SaaS API for database search. It enables any website or mobile application to easily provide its end-users with an instant and relevant search. With Algolia's unique find as you type experience, users can find what they're looking for in just a few keystrokes.</p>
-      <!--
-                            <em><img src="http://d2i3bryf8wh7jo.cloudfront.net/bitcoin1.png" style="float: left; margin-right: 10px; width: 40px; height: 40px;" /> Earn <strong>$5 in Bitcoin</strong> for every pull request which <a href="https://github.com/cdnjs/cdnjs#enabling-npm-auto-update">converts a library to auto-update.</a></em>-->
-    </div>
-    <h3 class="translateit">Media</h3>
-    <iframe width="100%" height="720" src="//www.youtube-nocookie.com/embed/6-5hJblkLjo?rel=0&hd=1&vq=hd720" frameborder="0" allowfullscreen></iframe>
+  </div>
   </div>
 </div>
+
+    <script async>window.twttr=(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],t=window.twttr||{};if(d.getElementById(id))return t;js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);t._e=[];t.ready=function(f){t._e.push(f);};return t;}(document,"script","twitter-wjs"));</script>
