should add font-awesome

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,6 +15,7 @@
     <meta name="description" content="{{description}}">
     <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="cdnjs">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/3.1.1-1/css/united/bootstrap.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/theme.css">
   </head>
 
