--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,7 @@
     <title>{{title}}</title>
     <meta property="og:title" content="{{title}}" />
     <meta property="og:image" content="/img/logotext.png" />
+    <meta property="og:description" content="{{description}}" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="{{description}}">
     <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="cdnjs">
