--- a/templates/profile.html
+++ b/templates/profile.html
@@ -30,7 +30,7 @@
               </td>
               <td style="padding: 0; width: 100%;">
                 <div style="position: relative; padding: 8px;">
-                  <p itemprop="downloadUrl" class="library-url" style="padding: 0; margin: 0">//cdnjs.cloudflare.com/ajax/libs/{{originalName}}/{{version}}/{{filename}}</p>
+                  <p itemprop="downloadUrl" class="library-url" style="padding: 0; margin: 0">https://cdnjs.cloudflare.com/ajax/libs/{{originalName}}/{{version}}/{{filename}}</p>
                   <span class="change-favorite" style="cursor: pointer; position: absolute; right: 10px; top: 5px; "></span>
                 </div>
               </td>
