--- a/templates/library.html
+++ b/templates/library.html
@@ -1,3 +1,5 @@
+<div class="container">
+
 <div class="library-container">
   <div class="col-md-12">
       <div class="row">
@@ -47,5 +49,6 @@
 
     <br />
     <br />
+</div>
 </div>
 </div>
