--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -5,7 +5,7 @@
         <div class="text-right text-muted">Realtime search by <a href="http://www.algolia.com/?utm_source=cdnjs&amp;utm_medium=link&amp;utm_campaign=cdnjs_search"><img src="/img/algolia64x20.png" style="height: 20px; width:64px" /></a></div>
     </div>
 </div>
-<div>
+<div class="container">
   <div class="col-md-12">
     <div>
       <div class="packages-table-container">
