--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,7 @@
         <div class="text-right text-muted">Realtime search by <a href="http://www.algolia.com/?utm_source=cdnjs&amp;utm_medium=link&amp;utm_campaign=cdnjs_search"><img src="/img/algolia64x20.png" style="height: 20px; width:64px" /></a></div>
     </div>
   </div>
-</div>
-<div>
+  <div class="row">
   <div class="col-md-12">
     <div>
       <div class="packages-table-container" style="display: none;">
@@ -23,5 +22,6 @@
         </table>
       </div>
     </div>
+  </div>
   </div>
 </div>
