changed the way syntax highlight works

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -74,7 +74,9 @@ $('.post > pre > code').wrapInner('<div class="container"><div class="row"><div 
 $('.post code').addClass('hljs');
 $('.post').show();
     </script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
 
+<script>hljs.initHighlightingOnLoad();</script>
 </body>
 
   </body>
