--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -34,6 +34,20 @@ h1,h2,h3,h4,h5 {
   font-size: 30px;
   margin: 10px 0;
 }
+p > code.hljs {
+  display: inline;
+  padding: 0;
+  margin: 0;
+  border-radius: 0;
+  background-color: #fff;
+  line-height: 13px;
+  overflow: hidden;
+  color: #f92672;
+  height: auto;
+  font-family: 'Roboto', sans-serif;
+  font-size: 100%;
+  font-style: italic;
+}
 </style>
 
 
