--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -87,6 +87,39 @@ p > code.hljs {
     </div>
   </div>
 </div>
+
+<div class="divider">
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        <h3>Related Tutorials</h3>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+            <table class="table table-hover" style="margin-top: 25px;">
+                <thead>
+                    <tr>
+                        <td>Tutorial</td>
+                        <td>Author</td>
+                    </tr>
+                </thead>
+                <tbody>
+                {{#tutorials}}
+                    <tr>
+                        <td><a href="/libraries/{{library}}/tutorials/{{slug}}">{{name}}</a></td>
+                        <td><a href="{{author.homepage}}">{{author.name}}</a></td>
+                    </tr>
+                {{/tutorials}}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 <div class="divider">
 
   <div class="container">
