--- a/templates/tutorials.html
+++ b/templates/tutorials.html
@@ -16,8 +16,8 @@
                 <tbody>
                 {{#tutorials}}
                     <tr>
-                        <td><a href="/libraries/{{library}}/tutorials/{{slug}}">{{name}}</a></td>
-                        <td><a href="{{homepage}}">{{author}}</a></td>
+                        <td><a href="/libraries/{{library}}/tutorials/{{slug}}">{{author.name}}</a></td>
+                        <td><a href="{{homepage}}">{{author.homepage}}</a></td>
                     </tr>
                 {{/tutorials}}
                 </tbody>
