don't show tutorials if none present

--- a/templates/library.html
+++ b/templates/library.html
@@ -47,7 +47,7 @@
           </table>
         </div>
       {{/selectedAssets}}
-
+      {{#tutorialsPresent}}
         <h3>Related Tutorials</h3>
             <table class="table table-hover" style="margin-top: 25px;">
                 <thead>
@@ -65,6 +65,7 @@
                 {{/tutorials}}
                 </tbody>
             </table>
+          {{/tutorialsPresent}}
 </div>
 </div>
 </div>
