new tutorials and fixes

--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -34,6 +34,8 @@ h1,h2,h3,h4,h5 {
   font-size: 30px;
   margin: 10px 0;
 }
+li > code.hljs,
+p > em > code.hljs,
 p > code.hljs {
   display: inline;
   padding: 0;
