update url of [Request a lib] to use shorten url by goo.gl

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,7 +30,7 @@
         <div class="col-md-12">
           <ul class="menu">
             <li class="logo"><a href="/">cdnjs</a></li>
-            <li><a href="https://github.com/cdnjs/cdnjs/issues/new?title=%5BRequest%5D%20Add%20_library_name_%20&body=Library%20name%3A%20%0AGit%20repository%20url%3A%0Anpm%20package%20url(optional)%3A%20%0AOfficial%20homepage%3A%0A">Request a lib</a></li>
+            <li><a href="https://goo.gl/JJpghw">Request a lib</a></li>
             <li><a href="https://gitter.im/cdnjs/cdnjs">Chat</a></li>
             <li><a href="https://www.cloudflare.com/network-map">Network</a></li>
             <li><a href="http://stats.pingdom.com/4jg86a2wqei0">Uptime</a></li>
