update url of [Request a lib] to update its issue template

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,4 +1,4 @@
-<!doctype html>
+!doctype html>
 <!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
@@ -30,7 +30,7 @@
         <div class="col-md-12">
           <ul class="menu">
             <li class="logo"><a href="/">cdnjs</a></li>
-            <li><a href="https://goo.gl/JJpghw">Request a lib</a></li>
+            <li><a href="https://goo.gl/EfDJx9">Request a lib</a></li>
             <li><a href="https://gitter.im/cdnjs/cdnjs">Chat</a></li>
             <li><a href="https://www.cloudflare.com/network-map">Network</a></li>
             <li><a href="http://stats.pingdom.com/4jg86a2wqei0">Uptime</a></li>
