--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.4/united/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/theme.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   </head>
 
   <body>
@@ -42,6 +43,9 @@
             </ul>
        </div>
        </div>
+       <button class="btn btn-lg btn-color col-xs-12">
+    <span class="glyphicon glyphicon-list pull-right"></span>
+</button>
 
        
   </div>
