--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,8 +6,8 @@
 <html class="no-js" lang="en">
 <!--<![endif]-->
   <head>
-    <link rel="preconnect" href="//cdnjs.cloudflare.com" />
-    <link rel="preconnect" href="//www.algolia.com" />
+    <link rel="preconnect" href="//cdnjs.cloudflare.com" pr="1.0" />
+    <link rel="preconnect" href="//www.algolia.com" pr="0.85" />
     <link rel="dns-prefetch" href="//static.getclicky.com" />
     <link rel="dns-prefetch" href="//www.google-analytics.com" />
     <meta charset="utf-8">
