update css, set color of link in label-highlight white

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -79,6 +79,10 @@ p#date{
   background: none;
 }
 
+.label-highlight a {
+  color: white !important;
+ }
+
 #carbonads {
   border: none !important;
   border-radius: 4px;
