adj licene link in lib page

--- a/templates/library.html
+++ b/templates/library.html
@@ -12,7 +12,7 @@
       <p><li class="label label-default label-highlight">{{library.autoupdateEnabled}}</li></p>
       <p>
       {{#licenses}}
-        <a href="{{url}}"  style="color: white !important;"><li class="label label-default label-highlight">{{type}} license</li></a>
+        <li class="label label-default label-highlight"><a href="{{url}}">{{type}} license</a></li>
       {{/licenses}}
       </p>
       <p>{{library.description}}</p>
