--- a/templates/library.html
+++ b/templates/library.html
@@ -4,7 +4,7 @@
 <div class="library-container">
   <div class="col-md-12">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-10">
 
     <h1 style="margin-top: 00px;">{{library.name}}</h1>
     <p><a href="{{library.homepage}}">{{library.homepage}}</a>
@@ -27,9 +27,10 @@
       <a href="https://gratipay.com/{{library.gratipay}}/"><img src="https://img.shields.io/gratipay/{{library.gratipay}}.svg" /></a>
       {{/library.gratipay}}
         </div>
-        <div class="col-md-4">
-
-      <script async type="text/javascript" src="https://cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=cdnjscom" id="_carbonads_js" async></script>
+        <div class="col-md-2">
+          <a href="//www.bluehost.com/track/cdnjs/intro" target="_blank">
+            <img id="intro-image" border="0" src="//bluehost-cdn.com/media/partner/images/cdnjs/120x120/bh-ppc-banners-dynamic-120x120.png">
+          </a>
         </div>
       </div>
        <div class="input-group version-dropdown">
